--- a/typeidea/templates/blog/detail.html
+++ b/typeidea/templates/blog/detail.html
@@ -1,3 +1,13 @@
-<a href="/">返回</a>
-<h1>{{ post.title }}</h1>
-{{ post.content }}
+{% extends "./base.html" %}
+
+{% block content %}
+    <h1>{{ post.title }}</h1>
+    <div>
+        <ul>
+            <li><a href="/">首页</a></li>
+            <li><a href="">{{ post.category.name }}</a> </li>
+            <li>正文</li>
+        </ul>
+    </div>
+</ul>
+{% endblock %}
