--- a/typeidea/static/css/base.css
+++ b/typeidea/static/css/base.css
@@ -2,31 +2,44 @@ body {
     background-color: #dbe2e9;
 }
 
+header {
+    background-color: #3d4450;
+    border-color: #080808;
+    height: 50px;
+    line-height: 50px;
+}
 .fixed-top {
     position: fixed;
+    top:0;
     right: 0;
     left: 0;
     border-width: 0 0 1px;
+    z-index: 1030;
+}
+header .search{
+    margin-top: 5px;
+}
+header input.header-input{
+     height: 40px;
+     line-height: 40px;
 }
 
-header {
-    height: 50px;
-    background-color: #3d4450;
-    border-color: #080808;
-    line-height: 50px;
+header input.header-btn{
+    margin-top: -15px
 }
-
 header nav a {
     color: #fff;
-    padding: 0 1.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 }
 
 header nav a:hover {
     color: #fff;
     text-decoration: none;
+}
+header nav a.link:hover {
     background-color: #000;
 }
-
 header a.logo {
     font-size: 1.5rem;
     padding-left: 0;
@@ -34,6 +47,9 @@ header a.logo {
 header a.logo:hover{
     background-color: #3d4450;
 }
+
+
+
 
 .banner {
     margin-top: 40px;
