--- a/typeidea/templates/themes/default/blog/list.html
+++ b/typeidea/templates/themes/default/blog/list.html
@@ -1,37 +1,60 @@
 {% extends "./base.html" %}
 {% block content %}
-    <ul>
-        {% if  posts %}
-            {% for post in posts %}
-                <div class="post-bottom">
-                    <h3 class="post-element-title" >
-                        <a href="{% url  'detail' post.id %}"> {{ post.title }}</a>
-                    </h3>
-                    <div>
-                        <nav class="nav">
-                            分类:<a class="nav-link post-element-nav" href="{% url 'category' post.category_id %}">{{ post.category.name }}</a>
-                            标签:<a class="nav-link post-element-nav" href="#">
-                            {% for tag in post.tags.all %}
-                                {{ tag.name }}
-                            {% endfor %}
-                            </a>
-                            作者:<a class="nav-link post-element-nav" href="#">{{ post.owner.username }}</a>
-                            创建日期:<a class="nav-link post-element-nav" href="#">{{ post.created_time }}</a>
-                        </nav>
-                    </div>
-                    <div>
-                        <p>{{ post.desc }}</p>
-                    </div>
-                </div>
 
-            {% endfor %}
-            {% if page_obj.has_previous %}<a href="?page={{ page_obj.previous_page_number }}">上一页</a>{% endif %}
-            Page {{ page_obj.number }} of {{ paginator.num_pages }}.
-            {% if page_obj.has_next %}<a href="?page={{ page_obj.next_page_number }}">下一页</a>{% endif %}
-        {% else %}
-            Empty
+    {% if query %}
+
+            您搜索的关键词:{{ query }}的结果如下：
+
+        <hr>
+    {% endif %}
+    {% if  posts %}
+        {% for post in posts %}
+            <div class="post-bottom">
+                <h3 class="post-element-title">
+                    <a href="{% url  'detail' post.id %}"> {{ post.title }}</a>
+                </h3>
+                <div>
+                    <nav class="nav">
+                        分类:<a class="nav-link post-element-nav"
+                              href="{% url 'category' post.category_id %}">{{ post.category.name }}</a>
+                        标签:{% for tag in post.tags.all %}
+            <a class="nav-link post-element-nav" href="{% url 'tag' tag.id %}">
+
+                            {{ tag.name }}
+                        {% endfor %}
+                    </a>
+                        作者:<a class="nav-link post-element-nav" href="{% url 'author' post.owner_id %}">{{ post.owner.username }}</a>
+                        创建日期:<a class="nav-link post-element-nav" href="#">{{ post.created_time }}</a>
+                    </nav>
+                </div>
+                <div>
+                    <p>{{ post.desc }}</p>
+                </div>
+            </div>
+
+        {% endfor %}
+
+        {% if page_obj.has_previous %}
+{{ query }}
+            {% if query %}
+
+                <a href="?page={{ page_obj.previous_page_number }}&query={{ query }}">上一页</a>
+            {% else %}
+                <a href="?page={{ page_obj.previous_page_number }}">上一页</a>
+            {% endif %}
         {% endif %}
-    </ul>
+        Page {{ page_obj.number }} of {{ paginator.num_pages }}.
+        {% if page_obj.has_next %}
+            {% if query %}
+                <a href="?page={{ page_obj.next_page_number }}&query={{ query }}">下一页</a>
+            {% else %}
+                <a href="?page={{ page_obj.next_page_number }}">下一页</a>
+            {% endif %}
+        {% endif %}
+    {% else %}
+        Empty
+    {% endif %}
+
 {% endblock %}
 
 
