--- a/typeidea/templates/themes/default/blog/detail.html
+++ b/typeidea/templates/themes/default/blog/detail.html
@@ -1,4 +1,4 @@
-{% extends "./base.html" %}
+{% extends "../base.html" %}
 
 {% block content %}
     <nav aria-label="breadcrumb" role="navigation">
