增加搜索按钮

--- a/typeidea/templates/themes/default/blog/detail.html
+++ b/typeidea/templates/themes/default/blog/detail.html
@@ -29,6 +29,17 @@
         <article class="content">
             {{ post.content }}
         </article>
+        <hr>
+        <div class="comment">
+            <form action="/comment/" method="post">
+                {% csrf_token %}
+                {{ comment_form }}
+                <input name="target" value="{{ request.path }}">
+
+                <input type="submit" value="提交!">
+            </form>
+        </div>
+
 
     </div>
 
