--- a/typeidea/templates/themes/default/comment/result.html
+++ b/typeidea/templates/themes/default/comment/result.html
@@ -1,12 +1,46 @@
-<style>
-    .errorlist {
-        color: red;
-    }
+<html>
+<head>
 
-</style>
+    <title>评论结果页</title>
+    <style>
+        body {text-align: center;}
+        .result{
+            text-align: center;
+            width: 40%;
+            margin: auto;
+        }
+        .errorlist {
+            color: red;
+        }
+        ul li {
+            list-style-type: none ;
+        }
 
-{% if succeed %}
-    发布成功
-{% else %}
-    {{ form }}
-{% endif %}
+    </style>
+</head>
+
+<body>
+
+
+<div class="result">
+    {% if succeed %}
+        发布成功
+        <a href="{{ target }}">返回</a>
+    {% else %}
+        <ul class="errorlist">
+            {% for field,message in form.errors.items %}
+                <li>{{ meaage }}</li>
+
+            {% endfor %}
+        </ul>
+        <a href="javascript:window.history.back();">返回</a>
+        {{ form }}
+    {% endif %}
+
+
+</div>
+
+
+</body>
+
+</html>
