--- a/typeidea/templates/themes/default/config/links.html
+++ b/typeidea/templates/themes/default/config/links.html
@@ -2,29 +2,28 @@
 
 {% block content %}
 
-
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Log</th>
-        <th scope="col">网站</th>
-        <th scope="col">描述</th>
-    </tr>
-    </thead>
-<tbody>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Log</th>
+            <th scope="col">网站</th>
+            <th scope="col">描述</th>
+        </tr>
+        </thead>
+        <tbody>
         {% for link in links %}
-           <tr>
-           <th><img height="25" src="{{ link.href }}/favicon.ico"></th>
-           <td><a href="{{ link.href }}" target="_blank">{{ link.title }}</a> </td>
-           <td></td>
-           </tr>
+            <tr>
+                <th><img height="25" src="{{ link.href }}/favicon.ico"></th>
+                <td><a href="{{ link.href }}" target="_blank">{{ link.title }}</a></td>
+                <td></td>
+            </tr>
 
-    {% endfor %}
+        {% endfor %}
 
-</tbody>
+        </tbody>
 
-</table>
+    </table>
 
     </ul>
-
+    {% include '../comment/block.html' %}
 {% endblock %}
