--- a/typeidea/templates/themes/default/blog/detail.html
+++ b/typeidea/templates/themes/default/blog/detail.html
@@ -27,7 +27,9 @@
             </nav>
         </div>
         <article class="content">
-            {{ post.content }}
+            {% autoescape off %}
+            {{ post.html }}
+            {% endautoescape %}
         </article>
 
 
